--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>3Alas</title>
 		<meta charset="utf-8">
-		<link href="sitio.css" rel="stylesheet">
+		<link href="estilos.css" rel="stylesheet">
 	</head>
 	
 	<body>
