--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<li class="botonera-lista"><a href="#">Boton 3</a></li>
 					<li class="botonera-lista"><a href="#">Boton 4</a></li>
 					<li class="botonera-lista"><a href="#">Boton 5</a></li>
+					<li class="botonera-lista"><a href="#">Boton 6</a></li>
 				</ul>
 			</nav>
 		
